@@ -5,6 +5,9 @@ TODO:
  * Add module for relaying events
  * Add API for rehashing the daemon (or implement it the API is there but does nothing)
 
+2008-02-19 MickeM
+ + Fixed a buffer overflow in the NRPE socket handling.
+ 
 2008-02-18 MickeM
  + Added propper output handling to process subsystem (now you can execute programs tat return "much" data.
  + Added select support for SSL_write (now you can send "any amount of data" to the (SSL) socket.
